--- a/AZSChool/AZSchool.WEB/Views/Home/Student.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Student.cshtml
@@ -164,19 +164,19 @@
                             <div class="u-container-style u-group u-white u-group-1">
                                 <div class="u-container-layout u-container-layout-2">
                                     <h6 class="u-text u-text-default u-text-2">Машинное обучение</h6>
-                                    <p class="u-text u-text-3">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-3">Машинное обучение - это наука о том, как заставить компьютеры работать без явного программирования. За последнее десятилетие машинное обучение дало нам беспилотные автомобили, практическое распознавание речи.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-2">
                                 <div class="u-container-layout u-container-layout-3">
                                     <h6 class="u-text u-text-default u-text-4">Наука о данных</h6>
-                                    <p class="u-text u-text-5">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-5">Эта специализация охватывает концепции и инструменты, которые вам понадобятся на протяжении всего процесса обработки данных, от задания правильных вопросов до выводов и публикации результатов. </p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-3">
                                 <div class="u-container-layout u-container-layout-4">
                                     <h6 class="u-text u-text-default u-text-6">Глубокое обучение</h6>
-                                    <p class="u-text u-text-7">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-7">Этот курс поможет вам ознакомиться с новейшими технологиями искусственного интеллекта. Инженеры по глубокому обучению сейчас широко востребованы, освойте методы глубокого обучения и перед вами откроются многочисленные карьерные возможности. </p>
                                 </div>
                             </div>
                         </div>
@@ -217,19 +217,19 @@
                             <div class="u-container-style u-group u-white u-group-4">
                                 <div class="u-container-layout u-container-layout-6">
                                     <h6 class="u-text u-text-default u-text-8">Data Science</h6>
-                                    <p class="u-text u-text-9">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-9">В последнем Capstone Project вы примените навыки, полученные при создании продукта данных с использованием реальных данных. По окончании у студентов будет портфолио, демонстрирующее их владение материалом.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-5">
                                 <div class="u-container-layout u-container-layout-7">
                                     <h6 class="u-text u-text-default u-text-10">Нейронные сети</h6>
-                                    <p class="u-text u-text-11">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-11">Данный курс позволяет разобраться, как в реальности действует глубокое обучение, а не просто дает его поверхностное описание. Поэтому после завершения курса вы сможете применять глубокое обучение в собственных приложениях.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-6">
                                 <div class="u-container-layout u-container-layout-8">
                                     <h6 class="u-text u-text-default u-text-12">Структуры данных в Python</h6>
-                                    <p class="u-text u-text-13">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-13">Эта специализация основана на успехе курса Python для всех и познакомит с фундаментальными концепциями программирования, включая структуры данных, сетевые программные интерфейсы приложений и базы данных, с использованием языка программирования Python.</p>
                                 </div>
                             </div>
                         </div>
@@ -301,19 +301,19 @@
                             <div class="u-container-style u-group u-white u-group-1">
                                 <div class="u-container-layout u-container-layout-2">
                                     <h6 class="u-text u-text-default u-text-2">Стэнфордский университет</h6>
-                                    <p class="u-text u-text-3">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-3">Один из самых известных образовательных и исследовательских университетов мира, является новатором в сфере высоких технологий.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-2">
                                 <div class="u-container-layout u-container-layout-3">
                                     <h6 class="u-text u-text-default u-text-4">IBM</h6>
-                                    <p class="u-text u-text-5">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-5">Американская компания со штаб-квартирой в Армонке, один из крупнейших в мире производителей и поставщиков аппаратного и программного обеспечения</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-3">
                                 <div class="u-container-layout u-container-layout-4">
                                     <h6 class="u-text u-text-default u-text-6">Университет Джона Хопкинса</h6>
-                                    <p class="u-text u-text-7">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-7">Частный исследовательский университет, основанный Джонсом Хопкинсом в городе Балтимор. </p>
                                 </div>
                             </div>
                         </div>
@@ -354,19 +354,19 @@
                             <div class="u-container-style u-group u-white u-group-4">
                                 <div class="u-container-layout u-container-layout-6">
                                     <h6 class="u-text u-text-default u-text-8">Стэнфордский университет</h6>
-                                    <p class="u-text u-text-9">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-9">Один из самых известных образовательных и исследовательских университетов мира, является новатором в сфере высоких технологий.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-5">
                                 <div class="u-container-layout u-container-layout-7">
                                     <h6 class="u-text u-text-default u-text-10">Университет Джона Хопкинса</h6>
-                                    <p class="u-text u-text-11">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-11">Частный исследовательский университет, основанный Джонсом Хопкинсом в городе Балтимор.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-6">
                                 <div class="u-container-layout u-container-layout-8">
                                     <h6 class="u-text u-text-default u-text-12">Университет Митчигана</h6>
-                                    <p class="u-text u-text-13">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <p class="u-text u-text-13">Известен своей активной научной деятельностью, открытиями в химии, медицине, физике, астрономии.</p>
                                 </div>
                             </div>
                         </div>
@@ -405,7 +405,7 @@
                         </div>
                         <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-37 u-layout-cell-2">
                             <div class="u-container-layout u-container-layout-2">
-                                <p class="u-text u-text-1">Присоединяйтесь к сообществу, которое включает 35 миллионов учащихся со всего мира</p>
+                                <p class="u-text" style=" font-size: 1.7rem;">Присоединяйтесь к сообществу, которое включает тысячи учащихся со всего мира</p>
                             </div>
                         </div>
                     </div>
@@ -424,8 +424,8 @@
                                 <div class="u-align-left u-container-style u-expanded-width u-group u-image u-image-round u-shape-round u-image-1" data-image-width="150" data-image-height="99">
                                     <div class="u-container-layout u-container-layout-2"></div>
                                 </div>
-                                <h5 class="u-align-left u-text u-text-2">Пример заголовка</h5>
-                                <p class="u-align-left u-text u-text-3">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                <h5 class="u-align-left u-text u-text-2">Иллинойсский университет в Урбана-Шампейн</h5>
+                                <p class="u-align-left u-text u-text-3">Онлайн-магистр бухгалтерского учета (iMSA)</p>
                                 <a href="#" class="u-btn u-button-style u-grey-15 u-btn-1" target="_blank">Информация</a>
                             </div>
                         </div>
@@ -434,8 +434,8 @@
                                 <div class="u-align-center u-container-style u-expanded-width u-group u-image u-image-round u-shape-round u-image-2" data-image-width="150" data-image-height="99">
                                     <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-4"></div>
                                 </div>
-                                <h5 class="u-text u-text-4">Пример заголовка</h5>
-                                <p class="u-text u-text-5">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                <h5 class="u-text u-text-4">Имперский колледж Лондон</h5>
+                                <p class="u-text u-text-5">Магистр машинного обучения и науки о данных</p>
                                 <a href="#" class="u-btn u-button-style u-grey-15 u-btn-2" target="_blank">Информация</a>
                             </div>
                         </div>
@@ -444,8 +444,8 @@
                                 <div class="u-align-center u-container-style u-expanded-width u-group u-image u-image-round u-shape-round u-image-3" data-image-width="150" data-image-height="96">
                                     <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-6"></div>
                                 </div>
-                                <h5 class="u-text u-text-6">Пример заголовка</h5>
-                                <p class="u-text u-text-7">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                <h5 class="u-text u-text-6">Пенсильванский университет</h5>
+                                <p class="u-text u-text-7">Магистр компьютерных и информационных технологий</p>
                                 <a href="#" class="u-btn u-button-style u-grey-15 u-btn-3" target="_blank">Информация</a>
                             </div>
                         </div>
@@ -454,8 +454,8 @@
                                 <div class="u-align-center u-container-style u-expanded-width u-group u-image u-image-round u-shape-round u-image-4" data-image-width="150" data-image-height="99">
                                     <div class="u-container-layout u-container-layout-8"></div>
                                 </div>
-                                <h5 class="u-text u-text-8">Пример заголовка</h5>
-                                <p class="u-text u-text-9">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                <h5 class="u-text u-text-8">Университет Колорадо в Боулдере</h5>
+                                <p class="u-text u-text-9">Магистр наук в области науки о данных</p>
                                 <a href="#" class="u-btn u-button-style u-grey-15 u-btn-4" target="_blank">Информация</a>
                             </div>
                         </div>
