--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -131,7 +131,7 @@
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
                                 </span>
                                 <h3 class="u-custom-font u-font-oswald u-text u-text-3">Лучшие Преподаватели</h3>
-                                <p class="u-text u-text-4">Наши курс составлены, исходя из лучших учебных практик, успешно зарекомендовавших себя в ведщих университетах мира.</p>
+                                <p class="u-text u-text-4">Наши курс составлены, исходя из лучших учебных практик, успешно зарекомендовавших себя в ведущих университетах мира.</p>
                             </div>
                         </div>
                         <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-20 u-size-20-md u-layout-cell-3">
@@ -249,7 +249,7 @@
             <div class="u-align-center-sm u-container-style u-group u-group-1">
                 <div class="u-container-layout u-container-layout-1">
                     <h2 class="u-custom-font u-font-oswald u-text u-text-1">Наши Преподаватели</h2>
-                    <p class="u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                    <p class="u-text u-text-2">Мы собрали лучших преподавателей для того, чтобы обеспечить наилучшее качество обучения наших студентов.</p>
                 </div>
             </div>
             <div class="u-clearfix u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-expanded-width-xs u-gutter-20 u-layout-wrap u-layout-wrap-1">
@@ -264,7 +264,7 @@
                                     <div class="u-container-layout u-valign-middle u-container-layout-3">
                                         <h2 class="u-custom-font u-font-oswald u-text u-text-3">Анастасия Семёнова</h2>
                                         <h6 class="u-text u-text-4">АРХИТЕКТОР ВЫЧИСЛИТЕЛЬНЫХ СИСТЕМ</h6>
-                                        <p class="u-text u-text-5">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                                        <p class="u-text u-text-5">Ведущий специалист в своей области с опытом работы в лучших университетах мира.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-1">
                                             <a class="u-social-url" target="_blank" href="">
                                                 <span class="u-icon u-icon-circle u-social-twitter u-social-type-logo u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-f79f"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-f79f"><path d="M92.2,38.2c0,0.8,0,1.6,0,2.3c0,24.3-18.6,52.4-52.6,52.4c-10.6,0.1-20.2-2.9-28.5-8.2 c1.4,0.2,2.9,0.2,4.4,0.2c8.7,0,16.7-2.9,23-7.9c-8.1-0.2-14.9-5.5-17.3-12.8c1.1,0.2,2.4,0.2,3.4,0.2c1.6,0,3.3-0.2,4.8-0.7 c-8.4-1.6-14.9-9.2-14.9-18c0-0.2,0-0.2,0-0.2c2.5,1.4,5.4,2.2,8.4,2.3c-5-3.3-8.3-8.9-8.3-15.4c0-3.4,1-6.5,2.5-9.2 c9.1,11.1,22.7,18.5,38,19.2c-0.2-1.4-0.4-2.8-0.4-4.3c0.1-10,8.3-18.2,18.5-18.2c5.4,0,10.1,2.2,13.5,5.7c4.3-0.8,8.1-2.3,11.7-4.5 c-1.4,4.3-4.3,7.9-8.1,10.1c3.7-0.4,7.3-1.4,10.6-2.9C98.9,32.3,95.7,35.5,92.2,38.2z"></path></svg></span>
@@ -291,7 +291,7 @@
                                     <div class="u-container-layout u-valign-middle u-container-layout-5">
                                         <h2 class="u-custom-font u-font-oswald u-text u-text-6">Сергей Ефимов</h2>
                                         <h6 class="u-text u-text-7">ПРЕПОДАВАТЕЛЬ ДИЗАЙНА</h6>
-                                        <p class="u-text u-text-8">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                                        <p class="u-text u-text-8">Лауреат престижных премий, автор многих дизайнерских решений.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-2">
                                             <a class="u-social-url" target="_blank" href="">
                                                 <span class="u-icon u-icon-circle u-social-facebook u-social-type-logo u-icon-6"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-9651"></use></svg><svg x="0px" y="0px" viewBox="0 0 112.2 112.2" enable-background="new 0 0 112.2 112.2" xml:space="preserve" id="svg-9651" class="u-svg-content"><path d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
@@ -322,7 +322,7 @@
                                     <div class="u-container-layout u-valign-middle u-container-layout-7">
                                         <h2 class="u-custom-font u-font-oswald u-text u-text-9">Елена Миграян</h2>
                                         <h6 class="u-text u-text-10">ПРЕПОДАВАТЕЛЬ СТАТИСТИКИ</h6>
-                                        <p class="u-text u-text-11">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                                        <p class="u-text u-text-11">Автор многих научных работ и публикаций, кандидат математических наук.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-3">
                                             <a class="u-social-url" target="_blank" href="">
                                                 <span class="u-icon u-icon-circle u-social-facebook u-social-type-logo u-icon-11"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d7b3"></use></svg><svg x="0px" y="0px" viewBox="0 0 112.2 112.2" enable-background="new 0 0 112.2 112.2" xml:space="preserve" id="svg-d7b3" class="u-svg-content"><path d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
@@ -349,7 +349,7 @@
                                     <div class="u-container-layout u-valign-middle u-container-layout-9">
                                         <h2 class="u-custom-font u-font-oswald u-text u-text-12">Анна Ким</h2>
                                         <h6 class="u-text u-text-13">ПРЕПОДАВАТЕЛЬ ЭКОНОМИКИ</h6>
-                                        <p class="u-text u-text-14">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                                        <p class="u-text u-text-14">Магистр экономических наук, автор монографий.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-4">
                                             <a class="u-social-url" target="_blank" href="">
                                                 <span class="u-icon u-icon-circle u-social-facebook u-social-type-logo u-icon-16"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5449"></use></svg><svg x="0px" y="0px" viewBox="0 0 112.2 112.2" enable-background="new 0 0 112.2 112.2" xml:space="preserve" id="svg-5449" class="u-svg-content"><path d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
