--- a/AZSChool/AZSchool.WEB/Views/Home/Student_Done.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Student_Done.cshtml
@@ -17,7 +17,7 @@
     <script class="u-script" type="text/javascript" src="~/js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 3.6.1, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <meta property="og:title" content="Student_InProgress">
     <meta property="og:type" content="website">
@@ -114,35 +114,40 @@
             </div>
         </div>
     </section>
+    
     <section class="u-align-left u-clearfix u-grey-10 u-section-2" id="sec-3238">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":2}--><!--/blog_options_json-->
             <div class="u-blog u-expanded-width u-repeater u-repeater-1">
-                <!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-1">
                     <div class="u-container-layout u-similar-container u-container-layout-1">
                         <a class="u-post-header-link" href="#">
-                            <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/Images/1.jpeg"><!--/blog_post_image-->
-                        </a><!--blog_post_header-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/Images/mashinnoeobuchenie.jpg">
+                        </a>
                         <h4 class="u-blog-control u-text u-text-1">
-                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Заголовок 1-го поста<!--/blog_post_header_content--></a>
-                        </h4><!--/blog_post_header--><!--blog_post_content-->
-                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Читать далее<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                            <a class="u-post-header-link" href="#">Data Engineering Foundations</a>
+                        </h4>
+                        <div class="u-blog-control u-post-content u-text u-text-2">Создайте фундамент для карьеры в области разработки данных. Получите практический опыт работы с Python, SQL и реляционными базами данных, а также освоите основы экосистемы Data Engineering.</div>
+                        <a href="#" class="u-blog-control u-btn u-button-style u-btn-1">Перейти</a>
+                        <div class="progress" style="width: 60%; margin: -30px 0px 0px 200px;">
+                            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                        </div>
                     </div>
                 </div><!--/blog_post--><!--blog_post-->
+
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-2">
                     <div class="u-container-layout u-similar-container u-container-layout-2">
                         <a class="u-post-header-link" href="blog/пост-1.html">
                             <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="~/Images/2.jpeg"><!--/blog_post_image-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="~/Images/strukturi.jpeg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-3">
-                            <a class="u-post-header-link" href="blog/пост-1.html"><!--blog_post_header_content-->Заголовок 2-го поста<!--/blog_post_header_content--></a>
+                            <a class="u-post-header-link" href="blog/пост-1.html"><!--blog_post_header_content-->Introduction to Programming with Python and Java<!--/blog_post_header_content--></a>
                         </h4><!--/blog_post_header--><!--blog_post_content-->
-                        <div class="u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="blog/пост-1.html" class="u-blog-control u-btn u-button-style u-btn-2"><!--blog_post_readmore_content-->Читать далее<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Повысьте свои навыки программирования на компьютере. С минимальным предыдущим опытом выучите два популярных языка программирования в ускоренном темпе.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                        <a href="blog/пост-1.html" class="u-blog-control u-btn u-button-style u-btn-2"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="progress" style="width: 60%; margin: -30px 0px 0px 200px;">
+                            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                        </div>
                     </div>
                 </div><!--/blog_post-->
             </div><!--/blog-->
