--- a/AZSChool/AZSchool.WEB/Views/Home/Teacher.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Teacher.cshtml
@@ -122,7 +122,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-1">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/07cd8a174c2af5c13eabc34e5fb960d37374f29bd0b592f2f765de512af14bbaee3e03d64e9f208e37a702d785a850f83b8198f32f42076c05731c_1280.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-1">
                                             <h3 class="u-gallery-heading"></h3>
@@ -131,7 +131,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/bc3a6bbf9e58a6b0d80233ab755ecd2b5c0f21ebb8150487b0943fe63502a05355436e8154eea91cdf4f2fa8419da25604a552a188b4e4dd71a2ab_1280.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-2">
                                             <h3 class="u-gallery-heading"></h3>
@@ -140,7 +140,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/ea4508bbe1cd1071950b32a1337a1a47d3fbcfc65e41423745b2020a3454dd6472ddafd334736557d3262ee24e06f912fe4e23dc18548c08469888_1280.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-3">
                                             <h3 class="u-gallery-heading"></h3>
@@ -151,20 +151,20 @@
                             </div>
                             <div class="u-container-style u-group u-white u-group-1">
                                 <div class="u-container-layout u-container-layout-2">
-                                    <h6 class="u-text u-text-default u-text-2">Пример заголовка</h6>
-                                    <p class="u-text u-text-3">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <h6 class="u-text u-text-default u-text-2">Маркетинг</h6>
+                                    <p class="u-text u-text-3">Типы и правила использования маркетинговых инструментов.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-2">
                                 <div class="u-container-layout u-container-layout-3">
-                                    <h6 class="u-text u-text-default u-text-4">Пример заголовка</h6>
-                                    <p class="u-text u-text-5">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <h6 class="u-text u-text-default u-text-4">Основы продвижения</h6>
+                                    <p class="u-text u-text-5">Инструменты и способы продвижения и продажи товаров и услуг.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-3">
                                 <div class="u-container-layout u-container-layout-4">
-                                    <h6 class="u-text u-text-default u-text-6">Пример заголовка</h6>
-                                    <p class="u-text u-text-7">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <h6 class="u-text u-text-default u-text-6">Реклама</h6>
+                                    <p class="u-text u-text-7">Основные инструменты онлайн и оффлайн рекламы.</p>
                                 </div>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-2">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/08375d96983b307a90a718638c7553763bb2ff2d2bd1073d9f7fa978acb4e41211d9e88bce80cb166f3e43fb87a26500f7cf1bbcf912b31705be61_1280.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-4">
                                             <h3 class="u-gallery-heading"></h3>
@@ -184,7 +184,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/9c5d0f1a822db684d61e75e766ecda5d5c973f3c5d39d24e09591f390755071be5fc607481af6173c8bb74c3333a59cfbbbca9ebbb1a98f373a764_1280.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-5">
                                             <h3 class="u-gallery-heading"></h3>
@@ -193,7 +193,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/832ae5f411b3a5b8e7675afe28a41cfd71a49dd4cd8089614f3ab4189b990cf1fce5e5dd4101d5e37a8c12845db4ca160d37932e0dfc4f5eabde47_1280.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-6">
                                             <h3 class="u-gallery-heading"></h3>
@@ -204,20 +204,20 @@
                             </div>
                             <div class="u-container-style u-group u-white u-group-4">
                                 <div class="u-container-layout u-container-layout-6">
-                                    <h6 class="u-text u-text-default u-text-8">Пример заголовка</h6>
-                                    <p class="u-text u-text-9">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <h6 class="u-text u-text-default u-text-8">Юриспруденция</h6>
+                                    <p class="u-text u-text-9">Базовые основы юриспруденции и составления официальной документации.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-5">
                                 <div class="u-container-layout u-container-layout-7">
-                                    <h6 class="u-text u-text-default u-text-10">Пример заголовка</h6>
-                                    <p class="u-text u-text-11">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <h6 class="u-text u-text-default u-text-10">Иностранные языки</h6>
+                                    <p class="u-text u-text-11">Вы сможете овладеть английским, турецким, французским и итальянским языком.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-6">
                                 <div class="u-container-layout u-container-layout-8">
-                                    <h6 class="u-text u-text-default u-text-12">Пример заголовка</h6>
-                                    <p class="u-text u-text-13">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                    <h6 class="u-text u-text-default u-text-12">Основы гос. управления</h6>
+                                    <p class="u-text u-text-13">Основы государственного управления и делопроизводства.</p>
                                 </div>
                             </div>
                         </div>
