--- a/AZSChool/AZSchool.WEB/Views/Home/Student_InProgress.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Student_InProgress.cshtml
@@ -17,6 +17,7 @@
     <script class="u-script" type="text/javascript" src="~/js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 3.6.1, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 
     <meta property="og:title" content="Student_InProgress">
@@ -123,26 +124,32 @@
                     <div class="u-container-layout u-similar-container u-container-layout-1">
                         <a class="u-post-header-link" href="#">
                             <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/Images/1.jpeg"><!--/blog_post_image-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/Images/profesionalcertificate.png"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-1">
-                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Заголовок 1-го поста<!--/blog_post_header_content--></a>
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Профессиональная сертификация <!--/blog_post_header_content--></a>
                         </h4><!--/blog_post_header--><!--blog_post_content-->
-                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Читать далее<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Этот новый сертификат из шести курсов для начинающих, разработанный Google, призван предоставить ИТ-специалистам востребованные навыки, включая Python, Git и автоматизацию ИТ, которые помогут вам продвинуться по карьерной лестнице.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                        <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="progress" style="width: 60%; margin: -30px 0px 0px 200px;">
+                            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        </div>
                     </div>
                 </div><!--/blog_post--><!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-2">
                     <div class="u-container-layout u-similar-container u-container-layout-2">
                         <a class="u-post-header-link" href="blog/пост-1.html">
                             <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="~/Images/2.jpeg"><!--/blog_post_image-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="~/Images/naukaodannih.jpg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-3">
-                            <a class="u-post-header-link" href="blog/пост-1.html"><!--blog_post_header_content-->Заголовок 2-го поста<!--/blog_post_header_content--></a>
+                            <a class="u-post-header-link" href="blog/пост-1.html"><!--blog_post_header_content-->Прикладная наука о данных <!--/blog_post_header_content--></a>
                         </h4><!--/blog_post_header--><!--blog_post_content-->
-                        <div class="u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="blog/пост-1.html" class="u-blog-control u-btn u-button-style u-btn-2"><!--blog_post_readmore_content-->Читать далее<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Эта программа опирается на ваш ИТ-фундамент, чтобы помочь вам вывести свою карьеру на новый уровень. Он разработан, чтобы научить вас программировать на Python и как использовать Python для автоматизации общих задач системного администрирования. <!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                        <a href="blog/пост-1.html" class="u-blog-control u-btn u-button-style u-btn-2"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="progress" style="width: 60%; margin: -30px 0px 0px 200px;">
+                            <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
                     </div>
                 </div><!--/blog_post-->
             </div><!--/blog-->
