--- a/AZSChool/AZSchool.WEB/Views/Home/Teacher_InProgress.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Teacher_InProgress.cshtml
@@ -18,6 +18,7 @@
     <meta name="generator" content="Nicepage 3.6.1, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <meta property="og:title" content="Student_InProgress">
     <meta property="og:type" content="website">
@@ -112,30 +113,41 @@
                     <div class="u-container-layout u-similar-container u-container-layout-1">
                         <a class="u-post-header-link" href="#">
                             <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/Images/1.jpeg"><!--/blog_post_image-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="/Images/9d78815b65758b736576b28f8b3bc8232b8896e2393971e13d531c84f78e21bb8f54ee050ee3ac7f33cd83277668dd3658cf6ab5cbea2e028c91f0_1280.jpg" ><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-1">
-                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Название курса<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Веб программирование<!--/blog_post_header_content--></a><br />
                             <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Студент: Коля Вася<!--/blog_post_header_content--></a><br />
                             <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Поток: 3<!--/blog_post_header_content--></a><br />
                         </h4><!--/blog_post_header--><!--blog_post_content-->
-                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Описание задания<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Создание сайтов разного уровня сложности с использованием самых популярных фреймворков.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
                         <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="progress" style="width: 60%; margin: -30px 0px 0px 200px;">
+                            <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%</div>
+                        </div>
                     </div>
                 </div><!--/blog_post--><!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-2">
                     <div class="u-container-layout u-similar-container u-container-layout-1">
                         <a class="u-post-header-link" href="#">
                             <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/Images/1.jpeg"><!--/blog_post_image-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="/Images/raspbery.jpg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-1">
-                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Название курса<!--/blog_post_header_content--></a><br />
-                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Студент: Коля Вася<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="#">
+                                <!--blog_post_header_content-->Программирование микроконтроллеров<!--/blog_post_header_content-->
+                            </a><br />
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Студент: Саша Петров<!--/blog_post_header_content--></a><br />
                             <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Поток: 3<!--/blog_post_header_content--></a><br />
                         </h4><!--/blog_post_header--><!--blog_post_content-->
-                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Описание задания<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                        <div class="u-blog-control u-post-content u-text u-text-2">
+                            <!--blog_post_content_content-->Основы программирование микроконтроллеров на языке C.
+                            <!--/blog_post_content_content-->
+                        </div><!--/blog_post_content--><!--blog_post_readmore-->
                         <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="progress" style="width: 60%; margin: -30px 0px 0px 200px;">
+                            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
                     </div>
                 </div><!--/blog_post-->
             </div><!--/blog-->
